--- a/ACM Chapter App Website/css/styles.css
+++ b/ACM Chapter App Website/css/styles.css
@@ -11,8 +11,8 @@
  /***** STRUCTURE *****/
  
  body { 
+ 	background-color: #000000;
 	background: url('../img/greenstripebackground.jpg') repeat;
-	background-color: #fff;
 	}
 	
 h1, h2, h3, h4, h5, h6 {
